Doc - UI - Fix UI text capitalization to follow the KDE Style Guide rules.
Reviewed-by: ossi

--- a/src/plugins/coreplugin/generalsettings.ui
+++ b/src/plugins/coreplugin/generalsettings.ui
@@ -270,17 +270,17 @@
           </property>
           <item>
            <property name="text">
-            <string>Always ask</string>
+            <string>Always Ask</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Reload all unchanged editors</string>
+            <string>Reload All Unchanged Editors</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Ignore modifications</string>
+            <string>Ignore Modifications</string>
            </property>
           </item>
          </widget>
