--- a/src/plugins/cpptools/completionsettingspage.ui
+++ b/src/plugins/cpptools/completionsettingspage.ui
@@ -65,7 +65,7 @@
           </item>
           <item>
            <property name="text">
-            <string>First letter</string>
+            <string>First Letter</string>
            </property>
           </item>
          </widget>
