--- a/src/plugins/cvs/settingspage.ui
+++ b/src/plugins/cvs/settingspage.ui
@@ -66,7 +66,7 @@
       <item row="3" column="0" colspan="2">
        <widget class="QCheckBox" name="describeByCommitIdCheckBox">
         <property name="toolTip">
-         <string>When checked, all files touched by a commit will be displayed when clicking on a revision number in the annotation view (retrieved via commit id). Otherwise, only the respective file will be displayed.</string>
+         <string>When checked, all files touched by a commit will be displayed when clicking on a revision number in the annotation view (retrieved via commit ID). Otherwise, only the respective file will be displayed.</string>
         </property>
         <property name="text">
          <string>Describe all files matching commit id</string>
