--- a/src/plugins/texteditor/behaviorsettingspage.ui
+++ b/src/plugins/texteditor/behaviorsettingspage.ui
@@ -200,7 +200,7 @@
           </item>
           <item>
            <property name="text">
-            <string>In leading white space</string>
+            <string>In Leading White Space</string>
            </property>
           </item>
          </widget>
