--- a/src/plugins/debugger/cdb/cdboptionspagewidget.ui
+++ b/src/plugins/debugger/cdb/cdboptionspagewidget.ui
@@ -19,7 +19,7 @@
         <string>These options take effect at the next start of Qt Creator.</string>
        </property>
        <property name="title">
-        <string extracomment="Placeholder">Cdb</string>
+        <string extracomment="Placeholder">CDB</string>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -82,13 +82,13 @@
    <item>
     <widget class="QGroupBox" name="variousOptionsGroupBox">
      <property name="title">
-      <string>Other options</string>
+      <string>Other Options</string>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
       <item row="0" column="0" colspan="2">
        <widget class="QCheckBox" name="verboseSymbolLoadingCheckBox">
         <property name="text">
-         <string>Verbose Symbol Loading</string>
+         <string>Verbose symbol loading</string>
         </property>
        </widget>
       </item>
