--- a/src/plugins/debugger/commonoptionspage.ui
+++ b/src/plugins/debugger/commonoptionspage.ui
@@ -33,7 +33,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Gui behavior</string>
+      <string>GUI Behavior</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0" colspan="2">
@@ -66,7 +66,7 @@
          <string>Register Qt Creator for debugging crashed applications.</string>
         </property>
         <property name="text">
-         <string>Use Creator for post-mortem debugging</string>
+         <string>Use Qt Creator for post-mortem debugging</string>
         </property>
        </widget>
       </item>
