--- a/src/plugins/help/generalsettingspage.ui
+++ b/src/plugins/help/generalsettingspage.ui
@@ -156,17 +156,17 @@
           </property>
           <item>
            <property name="text">
-            <string>Show side-by-side if possible</string>
+            <string>Show Side-by-Side if Possible</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Always show side-by-side</string>
+            <string>Always Show Side-by-Side</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Always start full help</string>
+            <string>Always Start Full Help</string>
            </property>
           </item>
          </widget>
@@ -194,17 +194,17 @@
           </property>
           <item>
            <property name="text">
-            <string>Show my home page</string>
+            <string>Show My Home Page</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Show a blank page</string>
+            <string>Show a Blank Page</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Show my tabs from last session</string>
+            <string>Show My Tabs from Last Session</string>
            </property>
           </item>
          </widget>
