--- a/src/plugins/locator/directoryfilter.ui
+++ b/src/plugins/locator/directoryfilter.ui
@@ -26,7 +26,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>File Types:</string>
+        <string>File types:</string>
        </property>
       </widget>
      </item>
