CodePaster: Fix sample URL: qtcreator.pastebin.com->creator.pastebin.com
Fix up bb6af2131cd537b3dd13074f2d072969850dd7ae.
Clear richtext flag on the QLabel and set openExternalLinks.
Change sample URL from qtcreator.pastebin.com to creator.pastebin.com.

--- a/src/plugins/cpaster/pastebindotcomsettings.ui
+++ b/src/plugins/cpaster/pastebindotcomsettings.ui
@@ -51,13 +51,16 @@
     <widget class="QLabel" name="explanatoryTextLabel">
      <property name="text">
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;
-&lt;p&gt;&lt;a href=&quot;http://pastebin.com&quot;&gt;pastebin.com&lt;/a&gt; allows to send posts to custom subdomains (eg. qtcreator.pastebin.com). Fill in the desired prefix.&lt;/p&gt;
+&lt;p&gt;&lt;a href=&quot;http://pastebin.com&quot;&gt;pastebin.com&lt;/a&gt; allows to send posts to custom subdomains (eg. creator.pastebin.com). Fill in the desired prefix.&lt;/p&gt;
 &lt;p&gt;Note that the plugin will use this for posting as well as fetching.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="textFormat">
-      <enum>Qt::RichText</enum>
+      <enum>Qt::AutoText</enum>
      </property>
      <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+     <property name="openExternalLinks">
       <bool>true</bool>
      </property>
     </widget>
