Add icons for checkout and clone wizards.

--- a/src/plugins/cvs/cvs.qrc
+++ b/src/plugins/cvs/cvs.qrc
@@ -1,5 +1,8 @@
 <RCC>
-    <qresource prefix="/trolltech.cvs" >
+    <qresource prefix="/trolltech.cvs">
         <file>CVS.mimetypes.xml</file>
+    </qresource>
+    <qresource prefix="/cvs">
+        <file>images/cvs.png</file>
     </qresource>
 </RCC>
