--- a/src/plugins/texteditor/generichighlighter/highlightersettingspage.ui
+++ b/src/plugins/texteditor/generichighlighter/highlightersettingspage.ui
@@ -6,33 +6,55 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>453</width>
+    <width>521</width>
     <height>230</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <widget class="QCheckBox" name="alertWhenNoDefinition">
+     <property name="text">
+      <string>Alert when a highlight definition is not found.</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="QGroupBox" name="definitionFilesGroupBox">
      <property name="title">
-      <string>Syntax Definition Files</string>
+      <string>Syntax Highlight Definition Files</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QLabel" name="locationLabel">
+       <widget class="QLabel" name="downloadNoteLabel">
         <property name="text">
-         <string>Location:</string>
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;Files can be downloaded from the &lt;/span&gt;&lt;a href=&quot;http://kate-editor.org/downloads/syntax_highlighting&quot;&gt;&lt;span style=&quot; font-size:8pt; text-decoration: underline; color:#0000ff;&quot;&gt;Kate Text Editor&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt; website and stored at the location below.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::RichText</enum>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::TextBrowserInteraction</set>
         </property>
        </widget>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="Utils::PathChooser" name="definitionFilesPath" native="true">
-          <zorder>locationLabel</zorder>
+         <widget class="QLabel" name="locationLabel">
+          <property name="text">
+           <string>Location:</string>
+          </property>
          </widget>
+        </item>
+        <item>
+         <widget class="Utils::PathChooser" name="definitionFilesPath" native="true"/>
         </item>
         <item>
          <widget class="QToolButton" name="resetButton">
@@ -51,11 +73,6 @@
        </layout>
       </item>
      </layout>
-     <zorder>locationLabel</zorder>
-     <zorder>definitionFilesPath</zorder>
-     <zorder>resetButton</zorder>
-     <zorder>resetButton</zorder>
-     <zorder>resetButton</zorder>
     </widget>
    </item>
    <item>
