--- a/src/plugins/qt4projectmanager/gettingstartedwelcomepagewidget.ui
+++ b/src/plugins/qt4projectmanager/gettingstartedwelcomepagewidget.ui
@@ -61,7 +61,9 @@
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="Utils::WelcomeModeTreeWidget" name="tutorialTreeWidget" native="true"/>
+          <widget class="Utils::WelcomeModeTreeWidget" name="tutorialTreeWidget" native="true">
+           <zorder></zorder>
+          </widget>
          </item>
         </layout>
        </widget>
@@ -137,7 +139,7 @@
          <item>
           <widget class="Utils::WelcomeModeLabel" name="demoTitleLabeldemosExamplesFrameQml">
            <property name="text">
-            <string>Explore Qt Quick (Preview) Examples</string>
+            <string>Explore Qt Quick Examples</string>
            </property>
           </widget>
          </item>
