Revert disabling of qml support (2.0.0 branch)
This reverts commit 5234c775f765a and 210652912b728e9c.

--- a/src/plugins/qt4projectmanager/gettingstartedwelcomepagewidget.ui
+++ b/src/plugins/qt4projectmanager/gettingstartedwelcomepagewidget.ui
@@ -119,7 +119,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QFrame" name="demosExamplesFrameQml">
+       <widget class="QFrame" name="demosExamplesFrame_2">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
           <horstretch>0</horstretch>
@@ -137,7 +137,7 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
-          <widget class="Utils::WelcomeModeLabel" name="demoTitleLabeldemosExamplesFrameQml">
+          <widget class="Utils::WelcomeModeLabel" name="demoTitleLabel_2">
            <property name="text">
             <string>Explore Qt Quick Examples</string>
            </property>
