--- a/src/plugins/bineditor/bineditor.qrc
+++ b/src/plugins/bineditor/bineditor.qrc
@@ -1,5 +1,3 @@
 <RCC>
-    <qresource prefix="/bineditor">
-        <file>ImageViewer.mimetypes.xml</file>
-    </qresource>
+    <qresource prefix="/bineditor"/>
 </RCC>
